# bazel-rust-linking-issue

./: .gitignore  BUILD.bazel  Cargo.toml  WORKSPACE
src/: lib.rs  main.rs
